--- a/React-Portfolio/src/index.css
+++ b/React-Portfolio/src/index.css
@@ -1,3 +1,68 @@
+
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  font-family: 'Arial', sans-serif;
+}
+
+/* Header Styles */
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 98%;
+  height: 70px;
+  background-color: #007BFF;
+  color: white;
+  z-index: 1000;
+}
+
+/* Main Content Styles */
+.main-content {
+  padding-top: 70px;
+  padding-bottom: 50px;
+  min-height: 100%;
+}
+
+/* Footer Styles */
+.footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  gap: 60px;
+  display: flex;
+  justify-content: center;
+  background-color: #007BFF;
+  color: white;
+  z-index: 1000;
+}
+
+.footer a svg {
+  width: 50px;
+  height: 60px;
+}
+
+.icon-text {
+  margin-left: 10px;
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  top: -20px;
+}
+
+.footer a {
+  color: rgb(0, 0, 0);
+  font-size: 24px;
+  transition: color 0.2s ease-in-out;
+}
+
+.footer a:hover {
+  color: #ffffff;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
