--- a/React-Portfolio/src/components/About/About.css
+++ b/React-Portfolio/src/components/About/About.css
@@ -1,17 +1,29 @@
 .about-section {
     display: flex;
     align-items: center;
-    margin: 50px 0;
+    justify-content: center;
     padding: 20px;
     background-color: #f5f5f5;
-  }
-  
-  .about-image {
+    gap: 20px;
+    width: 80%;
+    margin-right: 20%;
+    margin-top: 5%;
+    position: relative;
+}
+
+.about-image img {
+    margin-left: 30%;
+    max-width: 35%;
+    height: auto;
+    display: block;
+}
+
+.about-text {
+    
     flex: 1;
-    max-width: 200px;
-    margin-right: 50px;
-  }
-  
-  .about-text {
-    flex: 2;
-  }
+    text-align: left;
+    border: 2px solid #333;
+    padding: 20px;
+    background-color: #eaeaea;
+    width: 40%;
+}
