--- a/React-Portfolio/src/index.css
+++ b/React-Portfolio/src/index.css
@@ -11,7 +11,7 @@ body, html {
   top: 0;
   left: 0;
   width: 98%;
-  background-color: #007BFF;
+  background-color: #0b76e9;
   color: white;
   z-index: 1000;
   display: flex;
@@ -47,7 +47,7 @@ body, html {
   gap: 60px;
   display: flex;
   justify-content: center;
-  background-color: #007BFF;
+  background-color: #0b76e9;
   color: white;
   z-index: 1000;
 }
