--- a/src/index.css
+++ b/src/index.css
@@ -73,8 +73,8 @@ body, html {
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(49, 49, 49, 0.87);
-  background-color: #242424;
+  color: rgba(70, 70, 70, 0.87);
+  background-color: #faf8f8;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
